# nix-based-sandbox

./: .gitignore  Cargo.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
.reuse/: dep5
src/: main.rs
