[package]
name = "sandbox"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
tempfile = "3.5.0"
tokio = { version = "1.28.1", features = ["fs", "io-util", "macros", "process", "time"] }
