[package]
name = "sandbox"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
tempfile = "3.6.0"
tokio = { version = "1.31.0", features = ["fs", "io-util", "macros", "process", "time"] }
